--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
-.physik42 {background-color: red;
+.physik42 {background-color: blue;
 
 }
 
-.whitetext {color: white; }
+.whitetext {color: white; font-size: 1.6em; }
